# AiMusicGen

./: .gitignore  README.md  Training.md  pyproject.toml  requirements.txt  run.py
.claude/: launch.json
data/midi/: arp_60.mid  arp_62.mid  arp_64.mid  arp_65.mid  arp_67.mid  arp_69.mid  motif_60_0.mid  motif_60_1.mid  motif_60_2.mid  motif_60_3.mid  motif_62_0.mid  motif_62_1.mid  motif_62_2.mid  motif_62_3.mid  motif_64_0.mid  motif_64_1.mid  motif_64_2.mid  motif_64_3.mid  motif_65_0.mid  motif_65_1.mid  motif_65_2.mid  motif_65_3.mid  motif_67_0.mid  motif_67_1.mid  motif_67_2.mid  motif_67_3.mid  motif_69_0.mid  motif_69_1.mid  motif_69_2.mid  motif_69_3.mid  scale_down_60.mid  scale_down_62.mid  scale_down_64.mid  scale_down_65.mid  scale_down_67.mid  scale_down_69.mid  scale_up_60.mid  scale_up_62.mid  scale_up_64.mid  scale_up_65.mid  (+2 more)
data/midi/bach/: bwv1.6.mid  bwv10.7.mid  bwv101.7.mid  bwv102.7.mid  bwv103.6.mid  bwv104.6.mid  bwv108.6.mid  bwv11.6.mid  bwv110.7.mid  bwv111.6.mid  bwv112.5-sc.mid  bwv112.5.mid  bwv113.8.mid  bwv114.7.mid  bwv115.6.mid  bwv116.6.mid  bwv117.4.mid  bwv119.9.mid  bwv12.7.mid  bwv120.6.mid  bwv120.8-a.mid  bwv121.6.mid  bwv122.6.mid  bwv123.6.mid  bwv124.6.mid  bwv125.6.mid
data/midi/beethoven/: opus132.mid  opus133.mid  opus18no1_movement1.mid  opus18no1_movement2.mid  opus18no1_movement3.mid  opus18no1_movement4.mid  opus18no3.mid  opus18no4.mid  (+14 more)
scripts/: make_demo_data.py
src/aimusicgen/: __init__.py  cadence.py  config.py  constraints.py  counterpoint.py  generate.py  library.py  mistral.py  models.py  train.py
(+34 files in other folders)
